Fix list card node alignment

--- a/Notion like No Bullet Editor Mode.css
+++ b/Notion like No Bullet Editor Mode.css
@@ -170,11 +170,10 @@
 	} 
 	/* List Card Item */
 		.node-card-item:before {
-			margin-left: -0.2rem;
+			margin-left: -0.6rem;
 			background-color: var(--node-card-item-color);
 		}
 		.dark-mode .node-card-item:before {
-			margin-left: -0.2rem;
 			background-color: var(--node-card-item-color-dark);
 		}
 	/* Portal */
